--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
+  "engines":{"node":"10.16.0"},
   "author": "",
   "license": "ISC",
   "dependencies": {
